--- a/pom.xml
+++ b/pom.xml
@@ -65,4 +65,8 @@
 			<version>1.1.3</version>
 		</dependency>
 	</dependencies>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 </project>
